# AutoTurretPico

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  clockFix.c  clockFix.h  cmake_install.cmake  pico_uart_transport.c  pico_uart_transport.h  turret.dis  turret.elf  turret.elf.map  turret.hex  turret.uf2  turretMainLoop.cpp  turretMainLoop.hpp
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
src/: CMakeCache.txt
(+86 files in other folders)
